# scrapping_panini

./: README.md  pyproject.toml
data/: data.jsonl
src/coleta/: settings.py
src/coleta/spiders/: panini.py
src/dashboard/: app.py
src/data/: data.jsonl
src/transformacao/: main.py
