[tool.poetry]
name = "amazon-scrapping"
version = "0.1.0"
description = ""
authors = ["samuel_natividade <samuell.natividade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scrapy = "^2.11.2"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
